--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start-app": "concurrently \"npm install\" \"npm run start:client\" \"npm run start:server\"",
-    "start:client": "cd ../client &&  npm run dev",
-    "start:server": "nodemon server.js"
+    "build": "node server.js"
   },
   "repository": {
     "type": "git",
